--- a/03-ollama-deepseek-api/requirements.txt
+++ b/03-ollama-deepseek-api/requirements.txt
@@ -7,11 +7,11 @@ h11==0.14.0
 httpcore==1.0.8
 httpx==0.28.1
 idna==3.10
+ollama==0.4.7
 pydantic==2.11.3
 pydantic-core==2.33.1
-python-dotenv==1.1.0
 sniffio==1.3.1
-starlette==0.46.1
+starlette==0.46.2
 typing-extensions==4.13.2
 typing-inspection==0.4.0
-uvicorn==0.34.0
+uvicorn==0.34.1
