--- a/01-basic-chats/requirements.txt
+++ b/01-basic-chats/requirements.txt
@@ -3,12 +3,16 @@ anyio==4.9.0
 cachetools==5.5.2
 certifi==2025.1.31
 charset-normalizer==3.4.1
+distro==1.9.0
+dotenv==0.9.9
 google-auth==2.38.0
 google-genai==1.10.0
 h11==0.14.0
-httpcore==1.0.7
+httpcore==1.0.8
 httpx==0.28.1
 idna==3.10
+jiter==0.9.0
+openai==1.73.0
 pyasn1==0.6.1
 pyasn1-modules==0.4.2
 pydantic==2.11.3
@@ -17,7 +21,8 @@ python-dotenv==1.1.0
 requests==2.32.3
 rsa==4.9
 sniffio==1.3.1
-typing-extensions==4.13.1
+tqdm==4.67.1
+typing-extensions==4.13.2
 typing-inspection==0.4.0
-urllib3==2.3.0
+urllib3==2.4.0
 websockets==15.0.1
